<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/list"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/tag_icon"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/fav"
        android:icon="@drawable/heart"
        android:title="@string/title_whishlist" />

    <item
        android:id="@+id/account"
        android:icon="@drawable/profile"
        android:title="@string/title_account" />
</menu>
